Revert changes.