@@ -417,8 +417,6 @@ def createCheckTypeTask(checker, shortName) {
       "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
       "--add-exports",
       "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-      '--add-exports',
-      'jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
       "--add-opens",
       "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
     ]
@@ -448,8 +446,6 @@ def createCheckTypeTask(checker, shortName) {
         'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '--add-exports',
         'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
-        '--add-exports',
-        'jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
       ]
     }
   }
@@ -499,8 +495,6 @@ javadoc {
     "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
     "--add-exports",
     "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-    '--add-exports',
-    'jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED',
   ]
 }
 
